src/css/App.css
:root {
  background-color: #141414;
  font-family: monospace;
  font-size: 1rem;
}

.container {
  position: relative;
  background-image: linear-gradient(#0D2289, #06093B);
  border: 1px solid #c6c6c6;
  border-radius: 8px;
  box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.3);
  margin: 1rem;
  padding: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  overflow: hidden;
}

.container2 {
  position: relative;
  background-image: linear-gradient(#0D2289, #06093B);
  border: 1px solid #c6c6c6;
  border-radius: 8px;
  box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.3);
  margin: 1rem;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  overflow: hidden;
  white-space: nowrap;
}

.container {
  position: absolute;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.container2 {
  position: absolute;
  top: 20%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

img {
  max-width: 350px;
  max-height: 350px;
  display: flex;
  pointer-events: none;
}

